[gd_scene load_steps=71 format=3 uid="uid://5ogbjonar7f4"]

[ext_resource type="Texture2D" uid="uid://c521mq5bohl8i" path="res://Sprites/player/Coletta_spritesheet.png" id="1_2avid"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/coletta_movement.gd" id="1_huuco"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/current_player_state_HUD.gd" id="3_6b3kb"]
[ext_resource type="Texture2D" uid="uid://bml0vsendyyjr" path="res://icon.svg" id="3_x0yxt"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/coletta_animation.gd" id="5_0xoqd"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/strike_box.gd" id="6_86ain"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/state_machine_script.gd" id="7_jwido"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/None_state.gd" id="8_p4vbn"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/till_state.gd" id="8_w4i7s"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/water_state.gd" id="9_rl2j1"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/plant_state.gd" id="10_vfwaw"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/fertilize_state.gd" id="11_dund4"]
[ext_resource type="Script" path="res://Scripts/Player_scripts/open_inventory.gd" id="13_skoat"]
[ext_resource type="Script" path="res://Characters/place_object_state.gd" id="14_dc8tr"]
[ext_resource type="Script" path="res://Characters/use_object_state.gd" id="15_fiscd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jhyg8"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkeip"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3v4n"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaigd"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1k1r"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdu74"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bqg8"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t20on"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c354"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndcup"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qljn2"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0utyp"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ta8"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c727x"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvm23"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j43qu"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pouu"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kle5"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w82n"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_50dtp"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f5bi"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u24fe"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pcik"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_61hdb"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o43iq"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cesxh"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rijwv"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky50o"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_go44r"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3ts5"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubwx2"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaaxu"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j21in"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ei3r"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_if4rc"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dghoo"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_20n0a"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsu6y"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s2yu"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldqxh"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1ay2"]
atlas = ExtResource("1_2avid")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry4pv"]
atlas = ExtResource("1_2avid")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uldb5"]
atlas = ExtResource("1_2avid")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiw6q"]
atlas = ExtResource("1_2avid")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ve1u6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhyg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkeip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3v4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaigd")
}],
"loop": true,
"name": &"celebrate",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1k1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdu74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bqg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t20on")
}],
"loop": true,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c354")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndcup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qljn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0utyp")
}],
"loop": true,
"name": &"holding_walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ta8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c727x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvm23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j43qu")
}],
"loop": true,
"name": &"holding_walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pouu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kle5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w82n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50dtp")
}],
"loop": true,
"name": &"holding_walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f5bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u24fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pcik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61hdb")
}],
"loop": true,
"name": &"holding_walk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o43iq")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cesxh")
}],
"loop": true,
"name": &"idle_holding_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rijwv")
}],
"loop": true,
"name": &"idle_holding_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky50o")
}],
"loop": true,
"name": &"idle_holding_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_go44r")
}],
"loop": true,
"name": &"idle_holding_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ts5")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubwx2")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaaxu")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j21in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ei3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if4rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dghoo")
}],
"loop": true,
"name": &"left_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20n0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsu6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s2yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldqxh")
}],
"loop": true,
"name": &"right_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ay2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry4pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uldb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiw6q")
}],
"loop": true,
"name": &"up_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0lkah"]
size = Vector2(32, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v21yi"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3tdx"]
size = Vector2(12, 12)

[sub_resource type="Animation" id="Animation_u8ule"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("strike_box/CollisionShape2D:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-24, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike_box:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_r7kg0"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("strike_box:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike_box/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 24)]
}

[sub_resource type="Animation" id="Animation_cb136"]
resource_name = "down_strbx"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("strike_box:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike_box/CollisionShape2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 24)]
}

[sub_resource type="Animation" id="Animation_haiuw"]
resource_name = "left_strbx"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("strike_box:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike_box/CollisionShape2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 8)]
}

[sub_resource type="Animation" id="Animation_upp82"]
resource_name = "right_strbx"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("strike_box:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike_box/CollisionShape2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 8)]
}

[sub_resource type="Animation" id="Animation_8itlo"]
resource_name = "up_strbx"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("strike_box:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike_box/CollisionShape2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vcjm3"]
_data = {
"RESET": SubResource("Animation_u8ule"),
"default": SubResource("Animation_r7kg0"),
"down_strbx": SubResource("Animation_cb136"),
"left_strbx": SubResource("Animation_haiuw"),
"right_strbx": SubResource("Animation_upp82"),
"up_strbx": SubResource("Animation_8itlo")
}

[node name="Coletta" type="CharacterBody2D"]
z_index = 1
position = Vector2(16, 16)
script = ExtResource("1_huuco")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(0, 0, 0, 1)
offset_left = 176.0
offset_top = 200.0
offset_right = 256.0
offset_bottom = 224.0
texture = ExtResource("3_x0yxt")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 176.0
offset_top = 200.0
offset_right = 256.0
offset_bottom = 224.0
text = "Hi"
script = ExtResource("3_6b3kb")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ve1u6")
animation = &"idle_down"
script = ExtResource("5_0xoqd")

[node name="held_item" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(-1, -21)

[node name="interact_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_box"]
shape = SubResource("RectangleShape2D_0lkah")

[node name="body_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_v21yi")

[node name="strike_box" type="Area2D" parent="."]
collision_mask = 8
script = ExtResource("6_86ain")

[node name="CollisionShape2D" type="CollisionShape2D" parent="strike_box"]
position = Vector2(-24, 0)
shape = SubResource("RectangleShape2D_i3tdx")

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vcjm3")
}

[node name="Statemachine" type="Node" parent="."]
script = ExtResource("7_jwido")

[node name="None" type="Node" parent="Statemachine"]
script = ExtResource("8_p4vbn")

[node name="till" type="Node" parent="Statemachine"]
script = ExtResource("8_w4i7s")

[node name="water" type="Node" parent="Statemachine"]
script = ExtResource("9_rl2j1")

[node name="plant" type="Node" parent="Statemachine"]
script = ExtResource("10_vfwaw")

[node name="fertilize" type="Node" parent="Statemachine"]
script = ExtResource("11_dund4")

[node name="Inventory" type="Node" parent="Statemachine"]
script = ExtResource("13_skoat")

[node name="place_object" type="Node" parent="Statemachine"]
script = ExtResource("14_dc8tr")

[node name="useables" type="Node" parent="Statemachine"]
script = ExtResource("15_fiscd")

[connection signal="area_entered" from="strike_box" to="strike_box" method="_on_area_entered"]
[connection signal="area_exited" from="strike_box" to="strike_box" method="_on_area_exited"]
[connection signal="body_shape_entered" from="strike_box" to="strike_box" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="strike_box" to="strike_box" method="_on_body_shape_exited"]
